--- a/src/components/Notes/Notes.css
+++ b/src/components/Notes/Notes.css
@@ -31,6 +31,48 @@
       margin-bottom: 1em;
       color: rgb(72, 70, 67);
     }
+
+    .notes-title-container {
+      display: flex;
+      gap: 10px;
+
+      .image {
+        position: relative;
+        max-height: 48px;
+        max-width: 48px;
+        img {
+          object-fit: contain;
+          height: 100%;
+          width: 100%;
+        }
+
+        .pencil {
+          cursor: pointer;
+          border-radius: var(--border-radius);
+          background-color: rgba(0, 0, 0, 0.385);
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          display: none;
+          justify-content: center;
+          align-items: center;
+          svg {
+            display: none;
+            fill: white;
+          }
+        }
+        &:hover {
+          .pencil {
+            display: flex;
+            svg {
+              display: block;
+            }
+          }
+        }
+      }
+    }
   }
 
   /* when too small, just hide*/
